[tool.poetry]
name = "csv2cdx"
version = "2.1.1"
description = "CLI tool to convert excel and csv files to CycloneDX JSON files"
authors = ["Richard_E <restwick@cybeats.com>", "Cybeats <cs@cybeats.com"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/cybeats/csv2cdx"

keywords = ["SBOM", "CycloneDX", "Software Bill of Materials"]

[tool.poetry.dependencies]
python = "<4.0,>=3.9"
packageurl-python = "^0.11.1"
pandas = "^2.2.2"
cyclonedx-python-lib = "^7.6.0"
requests = "^2.32.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
csv2cdx = "csv2cdx.__main__:main"

